# gymgym-web-rust

./: .gitignore  README.md
frontend/trainee/: Cargo.toml  Makefile.toml
frontend/trainee/src/: lib.rs
frontend/trainee/src/app/: app.rs  mod.rs
frontend/trainee/src/app/components/: header.rs
